@@ -53,18 +53,18 @@ const char *NEDParser::getBuiltInDeclarations()
         "channel DelayChannel\n"
         "{\n"
         "    @class(cDelayChannel);\n"
-        "    bool disabled = false;\n"
-        "    double delay = 0s @unit(s); // propagation delay\n"
+        "    bool disabled = default(false);\n"
+        "    double delay = default(0s) @unit(s); // propagation delay\n"
         "}\n"
         "\n"
         "channel DatarateChannel\n"
         "{\n"
         "    @class(cDatarateChannel);\n"
-        "    bool disabled = false;\n"
-        "    double delay = 0s @unit(s); // propagation delay\n"
-        "    double datarate = 0bps @unit(bps); // bits per second\n"
-        "    double ber = 0; // bit error rate (BER)\n"
-        "    double per = 0; // packet error rate (PER)\n"
+        "    bool disabled = default(false);\n"
+        "    double delay = default(0s) @unit(s); // propagation delay\n"
+        "    double datarate = default(0bps) @unit(bps); // bits per second; 0=infinite\n"
+        "    double ber = default(0); // bit error rate (BER)\n"
+        "    double per = default(0); // packet error rate (PER)\n"
         "}\n"
         "\n"
         "moduleinterface IBidirectionalChannel\n"
